# cptest

./: Makefile  README.md  main  main.cc  main.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
cf-tests/: 0.in  1.in
loaders/: atcoder_downloader.py  atcoder_parser.py  codeforces_downloader.py  codeforces_parser.py  factory.py  force_writer.py  scraping_loader.py  test_data.py
runners/: __init__.py  c_runner.py  cc_runner.py  factory.py  java_runner.py  python_runner.py  rust_runner.py
src/cptest/: main.py
src/cptest/loaders/: __init__.py  atcoder_parser.py  codeforces_parser.py  factory.py  force_writer.py  scraping_loader.py  test_data.py
src/cptest/runners/: c_runner.py
src/cptest/testers/: __init__.py  tester_base.py
testers/: __init__.py  reasonable_tester.py  strict_tester.py  tester_base.py
tests/loaders/: test_atcoder_parser.py  test_codeforces_parser.py
tests/loaders/data/: at_abc264_abc264c.html  at_abc264_abc264c.json  at_agc032_agc032a.html  at_agc032_agc032a.json  cf_100_d.html  cf_100_d.json  cf_1300_e.html  cf_1300_e.json  cf_1696_d.html  cf_1696_d.json
